commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.interfaces.functionresultdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.functionresultdata.yml
@@ -7,6 +7,9 @@ items:
     langs:
       - typeScript
     type: interface
+    syntax:
+      typeParameters:
+        - id: T
     package: excel
     children:
       - excel.Excel.Interfaces.FunctionResultData.error
@@ -28,7 +31,7 @@ items:
           - string
   - uid: excel.Excel.Interfaces.FunctionResultData.value
     summary: |-
-      函数计算的值。 仅当未发生错误 (即, 未设置 error 属性) 时, 才会填充 "值" 字段。
+      函数计算的值。 仅当未发生错误 (即, 未设置 Error 属性) 时, 才会填充 "值" 字段。
 
       \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
