--- a/docs/docs-ref-autogen/office/office.binding.yml
+++ b/docs/docs-ref-autogen/office/office.binding.yml
@@ -179,6 +179,8 @@ items:
           description: '可选。 回调返回时调用的函数, 其唯一的参数的类型为 " [Office. AsyncResult](xref:office.Office.AsyncResult) "<!-- -->. 结果`value`的属性为指定绑定中的值。 如果指定`coercionType`了参数 (且调用成功), 则数据将以 CoercionType 枚举主题中所述的格式返回。'
           type:
             - '(result: AsyncResult<T>) => void'
+      typeParameters:
+        - id: T
   - uid: office.Office.Binding.getDataAsync_1
     summary: 返回绑定中包含的数据。
     remarks: |-
@@ -282,6 +284,8 @@ items:
           description: '可选。 回调返回时调用的函数, 其唯一的参数的类型为 " [Office. AsyncResult](xref:office.Office.AsyncResult) "<!-- -->. 结果`value`的属性为指定绑定中的值。 如果指定`coercionType`了参数 (且调用成功), 则数据将以 CoercionType 枚举主题中所述的格式返回。'
           type:
             - '(result: AsyncResult<T>) => void'
+      typeParameters:
+        - id: T
   - uid: office.Office.Binding.removeHandlerAsync
     summary: 从绑定移除指定事件类型的指定处理程序。
     remarks: '**要求集**: [BindingEvents](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#bindingevents)'
