--- a/docs/docs-ref-autogen/office/office.document.yml
+++ b/docs/docs-ref-autogen/office/office.document.yml
@@ -1467,6 +1467,8 @@ items:
           description: '可选。 回调返回时调用的函数, 其唯一的参数的类型为 " [Office. AsyncResult](xref:office.Office.AsyncResult) "<!-- -->. 结果`value`的属性为当前所选内容中的数据。 这是使用 coercionType 参数指定的数据结构或格式返回的。 （请参阅备注，了解有关数据强制的详细信息。）'
           type:
             - '(result: AsyncResult<T>) => void'
+      typeParameters:
+        - id: T
   - uid: office.Office.Document.getSelectedDataAsync_1
     summary: 读取包含在文档的当前选择中的数据。
     remarks: |-
@@ -1511,6 +1513,8 @@ items:
           description: '可选。 回调返回时调用的函数, 其唯一的参数的类型为 " [Office. AsyncResult](xref:office.Office.AsyncResult) "<!-- -->. 结果`value`的属性为当前所选内容中的数据。 这是使用 coercionType 参数指定的数据结构或格式返回的。 （请参阅备注，了解有关数据强制的详细信息。）'
           type:
             - '(result: AsyncResult<T>) => void'
+      typeParameters:
+        - id: T
   - uid: office.Office.Document.getSelectedResourceAsync
     summary: 仅限项目文档。 获取当前选定的资源的 Id。
     name: 'getSelectedResourceAsync(options, callback)'
@@ -2759,7 +2763,7 @@ items:
 
       - [HtmlCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#htmlcoercion)<!-- -->(使用时`Office.CoercionType.Html`<!-- -->)
 
-      - [ImageCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#imagecoercion)(使用时`Office.CoercionType.Image`<!-- -->)
+      - [ImageCoercion 1.1](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/image-coercion-requirement-sets)(使用时`Office.CoercionType.Image`<!-- -->)
 
       - [MatrixCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#matrixcoercion)(使用时`Office.CoercionType.Matrix`<!-- -->)
 
@@ -2770,6 +2774,8 @@ items:
       - [TableCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#tablecoercion)(使用时`Office.CoercionType.Table`<!-- -->)
 
       - [TextCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#textcoercion)(使用时`Office.CoercionType.Text`<!-- -->)
+
+      - [ImageCoercion 1.2](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/image-coercion-requirement-sets#imagecoercion-12)(使用时`Office.CoercionType.XmlSvg`<!-- -->)
 
       **特定于应用程序的行为**
 
@@ -2944,7 +2950,7 @@ items:
 
       - [HtmlCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#htmlcoercion)<!-- -->(使用时`Office.CoercionType.Html`<!-- -->)
 
-      - [ImageCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#imagecoercion)(使用时`Office.CoercionType.Image`<!-- -->)
+      - [ImageCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/image-coercion-requirement-sets)(使用时`Office.CoercionType.Image`<!-- -->)
 
       - [MatrixCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#matrixcoercion)(使用时`Office.CoercionType.Matrix`<!-- -->)
 
@@ -2955,6 +2961,8 @@ items:
       - [TableCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#tablecoercion)(使用时`Office.CoercionType.Table`<!-- -->)
 
       - [TextCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#textcoercion)(使用时`Office.CoercionType.Text`<!-- -->)
+
+      - [ImageCoercion 1.2](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/image-coercion-requirement-sets#imagecoercion-12)(使用时`Office.CoercionType.XmlSvg`<!-- -->)
 
       **特定于应用程序的行为**
 
