--- a/docs/docs-ref-autogen/office/office.requirementsetsupport.yml
+++ b/docs/docs-ref-autogen/office/office.requirementsetsupport.yml
@@ -18,7 +18,7 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'isSetSupported(name: string, minVersion?: number): boolean;'
+      content: 'isSetSupported(name: string, minVersion?: string | number): boolean;'
       return:
         type:
           - boolean
@@ -29,6 +29,6 @@ items:
           type:
             - string
         - id: minVersion
-          description: '所需的最低版本;例如, "1.4"。'
+          description: '所需的最低版本;例如, "1.4"。 注意: 此参数的 String 类型是推荐的数据类型。 数字类型的使用已弃用, 将不与最近的要求集兼容。'
           type:
-            - number
+            - string | number
