--- a/docs/docs-ref-autogen/office/officeextension.clientrequestcontext.yml
+++ b/docs/docs-ref-autogen/office/officeextension.clientrequestcontext.yml
@@ -95,7 +95,7 @@ items:
           type:
             - number
   - uid: office.OfficeExtension.ClientRequestContext.requestHeaders
-    summary: 请求头
+    summary: 请求标头
     name: requestHeaders
     fullName: requestHeaders
     langs:
@@ -124,6 +124,8 @@ items:
           description: ''
           type:
             - T
+      typeParameters:
+        - id: T
   - uid: office.OfficeExtension.ClientRequestContext.trace
     summary: '向队列中添加跟踪消息。 如果由于错误而拒绝`context.sync()`返回的承诺, 则会将 "traceMessages" 数组添加到 officeextension.error 对象, 其中包含已执行的所有跟踪消息。 这些消息可帮助您监视程序执行序列并检测错误的原因。'
     name: trace(message)
