--- a/docs/docs-ref-autogen/excel.yml
+++ b/docs/docs-ref-autogen/excel.yml
@@ -969,6 +969,8 @@ items:
           description: '一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。 Context 参数可促进对 Excel 应用程序的请求。 由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。'
           type:
             - '(context: Excel.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
   - uid: excel.Excel.run_1
     summary: '使用以前创建的 API 对象的 RequestContext, 执行对 Excel 对象模型执行操作的批处理脚本。 解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。'
     name: Excel.run_1
@@ -991,6 +993,8 @@ items:
           description: '一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。 Context 参数可促进对 Excel 应用程序的请求。 由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。'
           type:
             - '(context: Excel.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
   - uid: excel.Excel.run_2
     summary: '使用以前创建的 API 对象的 RequestContext, 执行对 Excel 对象模型执行操作的批处理脚本。'
     name: Excel.run_2
@@ -1013,6 +1017,8 @@ items:
           description: '一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。 Context 参数可促进对 Excel 应用程序的请求。 由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。'
           type:
             - '(context: Excel.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
   - uid: excel.Excel.run_3
     summary: '使用以前创建的 API 对象的 RequestContext, 执行对 Excel 对象模型执行操作的批处理脚本。 解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。'
     name: Excel.run_3
@@ -1035,6 +1041,8 @@ items:
           description: '一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。 Context 参数可促进对 Excel 应用程序的请求。 由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。'
           type:
             - '(context: Excel.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
   - uid: excel.Excel.run_4
     summary: '使用以前创建的对象的 RequestContext, 执行对 Excel 对象模型执行操作的批处理脚本。 解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。'
     remarks: |-
@@ -1067,6 +1075,8 @@ items:
           description: '一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。 Context 参数可促进对 Excel 应用程序的请求。 由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。'
           type:
             - '(context: Excel.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
 references:
   - uid: excel.Excel.AggregationFunction
     name: Excel.AggregationFunction
