--- a/docs/docs-ref-autogen/excel/excel.worksheet.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheet.yml
@@ -1186,6 +1186,26 @@ items:
       return:
         type:
           - OfficeExtension.EventHandlers<Excel.WorksheetSingleClickedEventArgs>
+        description: |-
+
+
+          #### <a name="examples"></a>示例
+
+          ```typescript
+          await Excel.run(async (context) => {
+              const sheet = context.workbook.worksheets.getActiveWorksheet();
+              sheet.onSingleClicked.add((event) => {
+                  return Excel.run((context) => {
+                      console.log(`Click detected at ${event.address} (pixel offset from upper-left cell corner: ${event.offsetX}, ${event.offsetY})`);
+                      return context.sync();
+                  });
+              });
+
+              console.log("The worksheet click handler is registered.");
+
+              await context.sync();
+          });
+          ```
   - uid: excel.Excel.Worksheet.pageLayout
     summary: |-
       获取工作表的 PageLayout 对象。
