--- a/docs/docs-ref-autogen/onenote.yml
+++ b/docs/docs-ref-autogen/onenote.yml
@@ -163,9 +163,11 @@ items:
         description: ''
       parameters:
         - id: batch
-          description: '一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。 context 参数可促进对 OneNote 应用程序的请求。 由于 Office 加载项和 OneNote 应用程序在两个不同的进程中运行, 因此请求上下文是从外接程序获取 OneNote 对象模型的访问权限所必需的。'
+          description: '一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。 Context 参数可促进对 OneNote 应用程序的请求。 由于 Office 加载项和 OneNote 应用程序在两个不同的进程中运行, 因此请求上下文是从外接程序获取 OneNote 对象模型的访问权限所必需的。'
           type:
             - '(context: OneNote.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
   - uid: onenote.OneNote.run_1
     summary: '使用以前创建的 API 对象的请求上下文, 执行对 OneNote 对象模型执行操作的批处理脚本。'
     name: OneNote.run_1
@@ -188,6 +190,8 @@ items:
           description: '一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。 解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。'
           type:
             - '(context: OneNote.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
   - uid: onenote.OneNote.run_2
     summary: '使用以前创建的 API 对象的请求上下文, 执行对 OneNote 对象模型执行操作的批处理脚本。'
     name: OneNote.run_2
@@ -210,6 +214,8 @@ items:
           description: '一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。 解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。'
           type:
             - '(context: OneNote.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
 references:
   - uid: onenote.OneNote.Application
     name: OneNote.Application
