commit bilingual contents

--- a/docs/docs-ref-autogen/onenote.yml
+++ b/docs/docs-ref-autogen/onenote.yml
@@ -149,7 +149,7 @@ items:
       - onenote.OneNote.TableRow
       - onenote.OneNote.TableRowCollection
   - uid: onenote.OneNote.run
-    summary: '<span data-ttu-id="86472-101">使用新的请求上下文执行对 OneNote 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="86472-101">Executes a batch script that performs actions on the OneNote object model, using a new request context.</span></span> <span data-ttu-id="86472-102">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="86472-102">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: '<span data-ttu-id="8f170-101">使用新的请求上下文执行对 OneNote 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="8f170-101">Executes a batch script that performs actions on the OneNote object model, using a new request context.</span></span> <span data-ttu-id="8f170-102">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="8f170-102">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
     name: OneNote.run
     fullName: OneNote.run
     langs:
@@ -163,11 +163,13 @@ items:
         description: ''
       parameters:
         - id: batch
-          description: '<span data-ttu-id="86472-103">一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="86472-103">A function that takes in an OneNote.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="86472-104">context 参数可促进对 OneNote 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="86472-104">The context parameter facilitates requests to the OneNote application.</span></span> <span data-ttu-id="86472-105">由于 Office 加载项和 OneNote 应用程序在两个不同的进程中运行, 因此请求上下文是从外接程序获取 OneNote 对象模型的访问权限所必需的。</span><span class="sxs-lookup"><span data-stu-id="86472-105">Since the Office add-in and the OneNote application run in two different processes, the request context is required to get access to the OneNote object model from the add-in.</span></span>'
+          description: '<span data-ttu-id="8f170-103">一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="8f170-103">A function that takes in an OneNote.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="8f170-104">Context 参数可促进对 OneNote 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="8f170-104">The context parameter facilitates requests to the OneNote application.</span></span> <span data-ttu-id="8f170-105">由于 Office 加载项和 OneNote 应用程序在两个不同的进程中运行, 因此请求上下文是从外接程序获取 OneNote 对象模型的访问权限所必需的。</span><span class="sxs-lookup"><span data-stu-id="8f170-105">Since the Office add-in and the OneNote application run in two different processes, the request context is required to get access to the OneNote object model from the add-in.</span></span>'
           type:
             - '(context: OneNote.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
   - uid: onenote.OneNote.run_1
-    summary: '<span data-ttu-id="86472-106">使用以前创建的 API 对象的请求上下文, 执行对 OneNote 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="86472-106">Executes a batch script that performs actions on the OneNote object model, using the request context of a previously-created API object.</span></span>'
+    summary: '<span data-ttu-id="8f170-106">使用以前创建的 API 对象的请求上下文, 执行对 OneNote 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="8f170-106">Executes a batch script that performs actions on the OneNote object model, using the request context of a previously-created API object.</span></span>'
     name: OneNote.run_1
     fullName: OneNote.run_1
     langs:
@@ -181,15 +183,17 @@ items:
         description: ''
       parameters:
         - id: object
-          description: '<span data-ttu-id="86472-107">以前创建的 API 对象。</span><span class="sxs-lookup"><span data-stu-id="86472-107">A previously-created API object.</span></span> <span data-ttu-id="86472-108">批处理将使用与传入的对象相同的请求上下文, 这意味着应用于该对象的任何更改都将由 "context. sync ()" 选取。</span><span class="sxs-lookup"><span data-stu-id="86472-108">The batch will use the same request context as the passed-in object, which means that any changes applied to the object will be picked up by "context.sync()".</span></span>'
+          description: '<span data-ttu-id="8f170-107">以前创建的 API 对象。</span><span class="sxs-lookup"><span data-stu-id="8f170-107">A previously-created API object.</span></span> <span data-ttu-id="8f170-108">批处理将使用与传入的对象相同的请求上下文, 这意味着应用于该对象的任何更改都将由 "context. sync ()" 选取。</span><span class="sxs-lookup"><span data-stu-id="8f170-108">The batch will use the same request context as the passed-in object, which means that any changes applied to the object will be picked up by "context.sync()".</span></span>'
           type:
             - office.OfficeExtension.ClientObject
         - id: batch
-          description: '<span data-ttu-id="86472-109">一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="86472-109">A function that takes in an OneNote.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="86472-110">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="86472-110">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+          description: '<span data-ttu-id="8f170-109">一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="8f170-109">A function that takes in an OneNote.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="8f170-110">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="8f170-110">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
           type:
             - '(context: OneNote.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
   - uid: onenote.OneNote.run_2
-    summary: '<span data-ttu-id="86472-111">使用以前创建的 API 对象的请求上下文, 执行对 OneNote 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="86472-111">Executes a batch script that performs actions on the OneNote object model, using the request context of previously-created API objects.</span></span>'
+    summary: '<span data-ttu-id="8f170-111">使用以前创建的 API 对象的请求上下文, 执行对 OneNote 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="8f170-111">Executes a batch script that performs actions on the OneNote object model, using the request context of previously-created API objects.</span></span>'
     name: OneNote.run_2
     fullName: OneNote.run_2
     langs:
@@ -207,9 +211,11 @@ items:
           type:
             - 'OfficeExtension.ClientObject[]'
         - id: batch
-          description: '<span data-ttu-id="86472-112">一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="86472-112">A function that takes in an OneNote.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="86472-113">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="86472-113">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+          description: '<span data-ttu-id="8f170-112">一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="8f170-112">A function that takes in an OneNote.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="8f170-113">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="8f170-113">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
           type:
             - '(context: OneNote.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
 references:
   - uid: onenote.OneNote.Application
     name: OneNote.Application
