--- a/docs/docs-ref-autogen/word_release.yml
+++ b/docs/docs-ref-autogen/word_release.yml
@@ -150,7 +150,7 @@ items:
       - word_release.Word.UnderlineType
       - word_release.Word.VerticalAlignment
   - uid: word_release.Word.run
-    summary: '<span data-ttu-id="cb7aa-101">使用以前创建的 API 对象的 RequestContext, 执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-101">Executes a batch script that performs actions on the Word object model, using the RequestContext of previously created API objects.</span></span>'
+    summary: '<span data-ttu-id="c3284-101">使用以前创建的 API 对象的 RequestContext, 执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="c3284-101">Executes a batch script that performs actions on the Word object model, using the RequestContext of previously created API objects.</span></span>'
     name: Word.run
     fullName: Word.run
     langs:
@@ -164,15 +164,17 @@ items:
         description: ''
       parameters:
         - id: objects
-          description: '<span data-ttu-id="cb7aa-102">以前创建的 API 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-102">An array of previously created API objects.</span></span> <span data-ttu-id="cb7aa-103">将验证该数组, 以确保所有对象都共享相同的上下文。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-103">The array will be validated to make sure that all of the objects share the same context.</span></span> <span data-ttu-id="cb7aa-104">批处理将使用此共享 RequestContext, 这意味着应用于这些对象的任何更改都将由 "context。 sync ()" 选取。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-104">The batch will use this shared RequestContext, which means that any changes applied to these objects will be picked up by "context.sync()".</span></span>'
+          description: '<span data-ttu-id="c3284-102">以前创建的 API 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="c3284-102">An array of previously created API objects.</span></span> <span data-ttu-id="c3284-103">将验证该数组, 以确保所有对象都共享相同的上下文。</span><span class="sxs-lookup"><span data-stu-id="c3284-103">The array will be validated to make sure that all of the objects share the same context.</span></span> <span data-ttu-id="c3284-104">批处理将使用此共享 RequestContext, 这意味着应用于这些对象的任何更改都将由 "context. sync ()" 选取。</span><span class="sxs-lookup"><span data-stu-id="c3284-104">The batch will use this shared RequestContext, which means that any changes applied to these objects will be picked up by "context.sync()".</span></span>'
           type:
             - 'OfficeExtension.ClientObject[]'
         - id: batch
-          description: '<span data-ttu-id="cb7aa-105">一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context。 sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-105">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="cb7aa-106">Context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-106">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="cb7aa-107">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-107">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
+          description: '<span data-ttu-id="c3284-105">一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="c3284-105">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="c3284-106">Context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="c3284-106">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="c3284-107">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="c3284-107">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
           type:
             - '(context: Word.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
   - uid: word_release.Word.run_1
-    summary: '<span data-ttu-id="cb7aa-108">使用以前创建的 API 对象的 RequestContext, 执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-108">Executes a batch script that performs actions on the Word object model, using the RequestContext of a previously created API object.</span></span> <span data-ttu-id="cb7aa-109">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-109">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: '<span data-ttu-id="c3284-108">使用以前创建的 API 对象的 RequestContext, 执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="c3284-108">Executes a batch script that performs actions on the Word object model, using the RequestContext of a previously created API object.</span></span> <span data-ttu-id="c3284-109">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="c3284-109">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
     name: Word.run_1
     fullName: Word.run_1
     langs:
@@ -186,21 +188,23 @@ items:
         description: ''
       parameters:
         - id: object
-          description: '<span data-ttu-id="cb7aa-110">以前创建的 API 对象。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-110">A previously created API object.</span></span> <span data-ttu-id="cb7aa-111">批处理将使用与传入的对象相同的 RequestContext, 这意味着应用于该对象的任何更改都将由 "context" () 来选取。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-111">The batch will use the same RequestContext as the passed-in object, which means that any changes applied to the object will be picked up by "context.sync()".</span></span>'
+          description: '<span data-ttu-id="c3284-110">以前创建的 API 对象。</span><span class="sxs-lookup"><span data-stu-id="c3284-110">A previously created API object.</span></span> <span data-ttu-id="c3284-111">批处理将使用与传入的对象相同的 RequestContext, 这意味着应用于该对象的任何更改都将由 "context" () 来选取。</span><span class="sxs-lookup"><span data-stu-id="c3284-111">The batch will use the same RequestContext as the passed-in object, which means that any changes applied to the object will be picked up by "context.sync()".</span></span>'
           type:
             - office.OfficeExtension.ClientObject
         - id: batch
-          description: '<span data-ttu-id="cb7aa-112">一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context。 sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-112">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="cb7aa-113">Context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-113">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="cb7aa-114">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-114">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
+          description: '<span data-ttu-id="c3284-112">一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="c3284-112">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="c3284-113">Context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="c3284-113">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="c3284-114">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="c3284-114">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
           type:
             - '(context: Word.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
   - uid: word_release.Word.run_2
-    summary: '<span data-ttu-id="cb7aa-115">使用新的 RequestContext 执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-115">Executes a batch script that performs actions on the Word object model, using a new RequestContext.</span></span> <span data-ttu-id="cb7aa-116">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-116">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: '<span data-ttu-id="c3284-115">使用新的 RequestContext 执行对 Word 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="c3284-115">Executes a batch script that performs actions on the Word object model, using a new RequestContext.</span></span> <span data-ttu-id="c3284-116">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="c3284-116">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
     remarks: |-
-      <span data-ttu-id="cb7aa-117">除了此签名之外, 此方法还具有以下签名, 使您可以使用以前创建的对象的请求上下文恢复:</span><span class="sxs-lookup"><span data-stu-id="cb7aa-117">In addition to this signature, the method also has the following signatures, which allow you to resume using the request context of previously created objects:</span></span>
+      <span data-ttu-id="c3284-117">除了此签名之外, 此方法还具有以下签名, 使您可以使用以前创建的对象的请求上下文恢复:</span><span class="sxs-lookup"><span data-stu-id="c3284-117">In addition to this signature, the method also has the following signatures, which allow you to resume using the request context of previously created objects:</span></span>
 
-      <span data-ttu-id="cb7aa-118">run<T>(Object: officeextension.error, batch: (Context: RequestContext) =</span><span class="sxs-lookup"><span data-stu-id="cb7aa-118">run<T>(object: OfficeExtension.ClientObject, batch: (context: Word.RequestContext) =</span></span><!-- --><span data-ttu-id="cb7aa-119">&gt;承诺<T>): 承诺<T>;</span><span class="sxs-lookup"><span data-stu-id="cb7aa-119">&gt; Promise<T>): Promise<T>;</span></span>
+      <span data-ttu-id="c3284-118">run<T>(Object: officeextension.error, batch: (Context: RequestContext) =</span><span class="sxs-lookup"><span data-stu-id="c3284-118">run<T>(object: OfficeExtension.ClientObject, batch: (context: Word.RequestContext) =</span></span><!-- --><span data-ttu-id="c3284-119">&gt;承诺<T>): 承诺<T>;</span><span class="sxs-lookup"><span data-stu-id="c3284-119">&gt; Promise<T>): Promise<T>;</span></span>
 
-      <span data-ttu-id="cb7aa-120">run<T>(对象: officeextension.error\[\], batch: (context: RequestContext) =</span><span class="sxs-lookup"><span data-stu-id="cb7aa-120">run<T>(objects: OfficeExtension.ClientObject\[\], batch: (context: Word.RequestContext) =</span></span><!-- --><span data-ttu-id="cb7aa-121">&gt;承诺<T>): 承诺<T>;</span><span class="sxs-lookup"><span data-stu-id="cb7aa-121">&gt; Promise<T>): Promise<T>;</span></span>
+      <span data-ttu-id="c3284-120">run<T>(对象: officeextension.error\[\], batch: (context: RequestContext) =</span><span class="sxs-lookup"><span data-stu-id="c3284-120">run<T>(objects: OfficeExtension.ClientObject\[\], batch: (context: Word.RequestContext) =</span></span><!-- --><span data-ttu-id="c3284-121">&gt;承诺<T>): 承诺<T>;</span><span class="sxs-lookup"><span data-stu-id="c3284-121">&gt; Promise<T>): Promise<T>;</span></span>
     name: Word.run_2
     fullName: Word.run_2
     langs:
@@ -214,9 +218,11 @@ items:
         description: ''
       parameters:
         - id: batch
-          description: '<span data-ttu-id="cb7aa-122">一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context。 sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-122">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="cb7aa-123">Context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-123">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="cb7aa-124">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="cb7aa-124">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
+          description: '<span data-ttu-id="c3284-122">一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="c3284-122">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="c3284-123">Context 参数可促进对 Word 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="c3284-123">The context parameter facilitates requests to the Word application.</span></span> <span data-ttu-id="c3284-124">由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="c3284-124">Since the Office add-in and the Word application run in two different processes, the RequestContext is required to get access to the Word object model from the add-in.</span></span>'
           type:
             - '(context: Word.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
 references:
   - uid: word_release.Word.Alignment
     name: Word.Alignment
