--- a/docs/docs-ref-autogen/excel/excel.interfaces.functionresultdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.functionresultdata.yml
@@ -1,21 +1,24 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.Interfaces.FunctionResultData
-    summary: <span data-ttu-id="27b32-101">描述通过调用 "functionResult ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="27b32-101">An interface describing the data returned by calling "functionResult.toJSON()".</span></span>
+    summary: <span data-ttu-id="ca811-101">描述通过调用 "functionResult ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="ca811-101">An interface describing the data returned by calling "functionResult.toJSON()".</span></span>
     name: Excel.Interfaces.FunctionResultData
     fullName: Excel.Interfaces.FunctionResultData
     langs:
       - typeScript
     type: interface
+    syntax:
+      typeParameters:
+        - id: T
     package: excel
     children:
       - excel.Excel.Interfaces.FunctionResultData.error
       - excel.Excel.Interfaces.FunctionResultData.value
   - uid: excel.Excel.Interfaces.FunctionResultData.error
     summary: |-
-      <span data-ttu-id="27b32-102">表示错误的错误值 (\#如 "DIV/0")。</span><span class="sxs-lookup"><span data-stu-id="27b32-102">Error value (such as "\#DIV/0") representing the error.</span></span> <span data-ttu-id="27b32-103">如果未设置错误字符串, 则函数成功, 并将其结果写入值字段。</span><span class="sxs-lookup"><span data-stu-id="27b32-103">If the error string is not set, then the function succeeded, and its result is written to the Value field.</span></span> <span data-ttu-id="27b32-104">该错误始终位于英语区域设置中。</span><span class="sxs-lookup"><span data-stu-id="27b32-104">The error is always in the English locale.</span></span>
+      <span data-ttu-id="ca811-102">表示错误的错误值 (\#如 "DIV/0")。</span><span class="sxs-lookup"><span data-stu-id="ca811-102">Error value (such as "\#DIV/0") representing the error.</span></span> <span data-ttu-id="ca811-103">如果未设置错误字符串, 则函数成功, 并将其结果写入值字段。</span><span class="sxs-lookup"><span data-stu-id="ca811-103">If the error string is not set, then the function succeeded, and its result is written to the Value field.</span></span> <span data-ttu-id="ca811-104">该错误始终位于英语区域设置中。</span><span class="sxs-lookup"><span data-stu-id="ca811-104">The error is always in the English locale.</span></span>
 
-      <span data-ttu-id="27b32-105">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="27b32-105">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ca811-105">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ca811-105">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: error
     fullName: error
     langs:
@@ -28,9 +31,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.FunctionResultData.value
     summary: |-
-      <span data-ttu-id="27b32-106">函数计算的值。</span><span class="sxs-lookup"><span data-stu-id="27b32-106">The value of function evaluation.</span></span> <span data-ttu-id="27b32-107">仅当未发生错误 (即, 未设置 error 属性) 时, 才会填充 "值" 字段。</span><span class="sxs-lookup"><span data-stu-id="27b32-107">The value field will be populated only if no error has occurred (i.e., the Error property is not set).</span></span>
+      <span data-ttu-id="ca811-106">函数计算的值。</span><span class="sxs-lookup"><span data-stu-id="ca811-106">The value of function evaluation.</span></span> <span data-ttu-id="ca811-107">仅当未发生错误 (即, 未设置 Error 属性) 时, 才会填充 "值" 字段。</span><span class="sxs-lookup"><span data-stu-id="ca811-107">The value field will be populated only if no error has occurred (i.e., the Error property is not set).</span></span>
 
-      <span data-ttu-id="27b32-108">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="27b32-108">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ca811-108">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ca811-108">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: value
     fullName: value
     langs:
