--- a/docs/docs-ref-autogen/visio.yml
+++ b/docs/docs-ref-autogen/visio.yml
@@ -89,7 +89,7 @@ items:
       - visio.Visio.ShapeView
       - visio.Visio.ToolBarType
   - uid: visio.Visio.run
-    summary: '<span data-ttu-id="63877-101">使用新的请求上下文执行对 Visio 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="63877-101">Executes a batch script that performs actions on the Visio object model, using a new request context.</span></span> <span data-ttu-id="63877-102">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="63877-102">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: '<span data-ttu-id="844b2-101">使用新的请求上下文执行对 Visio 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="844b2-101">Executes a batch script that performs actions on the Visio object model, using a new request context.</span></span> <span data-ttu-id="844b2-102">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="844b2-102">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
     name: Visio.run
     fullName: Visio.run
     langs:
@@ -103,11 +103,13 @@ items:
         description: ''
       parameters:
         - id: batch
-          description: '<span data-ttu-id="63877-103">一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="63877-103">A function that takes in an Visio.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="63877-104">context 参数可促进对 Visio 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="63877-104">The context parameter facilitates requests to the Visio application.</span></span> <span data-ttu-id="63877-105">由于 Office 加载项和 Visio 应用程序在两个不同的进程中运行, 因此需要请求上下文才能从外接程序获取对 Visio 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="63877-105">Since the Office add-in and the Visio application run in two different processes, the request context is required to get access to the Visio object model from the add-in.</span></span>'
+          description: '<span data-ttu-id="844b2-103">一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="844b2-103">A function that takes in an Visio.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="844b2-104">Context 参数可促进对 Visio 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="844b2-104">The context parameter facilitates requests to the Visio application.</span></span> <span data-ttu-id="844b2-105">由于 Office 加载项和 Visio 应用程序在两个不同的进程中运行, 因此需要请求上下文才能从外接程序获取对 Visio 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="844b2-105">Since the Office add-in and the Visio application run in two different processes, the request context is required to get access to the Visio object model from the add-in.</span></span>'
           type:
             - '(context: Visio.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
   - uid: visio.Visio.run_1
-    summary: '<span data-ttu-id="63877-106">使用以前创建的 API 对象的请求上下文, 执行对 Visio 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="63877-106">Executes a batch script that performs actions on the Visio object model, using the request context of a previously-created API object.</span></span>'
+    summary: '<span data-ttu-id="844b2-106">使用以前创建的 API 对象的请求上下文, 执行对 Visio 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="844b2-106">Executes a batch script that performs actions on the Visio object model, using the request context of a previously-created API object.</span></span>'
     name: Visio.run_1
     fullName: Visio.run_1
     langs:
@@ -121,15 +123,17 @@ items:
         description: ''
       parameters:
         - id: object
-          description: '<span data-ttu-id="63877-107">以前创建的 API 对象。</span><span class="sxs-lookup"><span data-stu-id="63877-107">A previously-created API object.</span></span> <span data-ttu-id="63877-108">批处理将使用与传入的对象相同的请求上下文, 这意味着应用于该对象的任何更改都将由 "context. sync ()" 选取。</span><span class="sxs-lookup"><span data-stu-id="63877-108">The batch will use the same request context as the passed-in object, which means that any changes applied to the object will be picked up by "context.sync()".</span></span>'
+          description: '<span data-ttu-id="844b2-107">以前创建的 API 对象。</span><span class="sxs-lookup"><span data-stu-id="844b2-107">A previously-created API object.</span></span> <span data-ttu-id="844b2-108">批处理将使用与传入的对象相同的请求上下文, 这意味着应用于该对象的任何更改都将由 "context. sync ()" 选取。</span><span class="sxs-lookup"><span data-stu-id="844b2-108">The batch will use the same request context as the passed-in object, which means that any changes applied to the object will be picked up by "context.sync()".</span></span>'
           type:
             - OfficeExtension.ClientObject | OfficeExtension.EmbeddedSession
         - id: batch
-          description: '<span data-ttu-id="63877-109">一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="63877-109">A function that takes in an Visio.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="63877-110">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="63877-110">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+          description: '<span data-ttu-id="844b2-109">一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="844b2-109">A function that takes in an Visio.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="844b2-110">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="844b2-110">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
           type:
             - '(context: Visio.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
   - uid: visio.Visio.run_2
-    summary: '<span data-ttu-id="63877-111">使用以前创建的 API 对象的请求上下文, 执行对 Visio 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="63877-111">Executes a batch script that performs actions on the Visio object model, using the request context of previously-created API objects.</span></span>'
+    summary: '<span data-ttu-id="844b2-111">使用以前创建的 API 对象的请求上下文, 执行对 Visio 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="844b2-111">Executes a batch script that performs actions on the Visio object model, using the request context of previously-created API objects.</span></span>'
     name: Visio.run_2
     fullName: Visio.run_2
     langs:
@@ -143,17 +147,19 @@ items:
         description: ''
       parameters:
         - id: objects
-          description: '<span data-ttu-id="63877-112">以前创建的 API 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="63877-112">An array of previously-created API objects.</span></span> <span data-ttu-id="63877-113">将验证该数组, 以确保所有对象都共享相同的上下文。</span><span class="sxs-lookup"><span data-stu-id="63877-113">The array will be validated to make sure that all of the objects share the same context.</span></span> <span data-ttu-id="63877-114">批处理将使用此共享请求上下文, 这意味着应用于这些对象的任何更改都将由 "context. sync ()" 选取。</span><span class="sxs-lookup"><span data-stu-id="63877-114">The batch will use this shared request context, which means that any changes applied to these objects will be picked up by "context.sync()".</span></span>'
+          description: '<span data-ttu-id="844b2-112">以前创建的 API 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="844b2-112">An array of previously-created API objects.</span></span> <span data-ttu-id="844b2-113">将验证该数组, 以确保所有对象都共享相同的上下文。</span><span class="sxs-lookup"><span data-stu-id="844b2-113">The array will be validated to make sure that all of the objects share the same context.</span></span> <span data-ttu-id="844b2-114">批处理将使用此共享请求上下文, 这意味着应用于这些对象的任何更改都将由 "context. sync ()" 选取。</span><span class="sxs-lookup"><span data-stu-id="844b2-114">The batch will use this shared request context, which means that any changes applied to these objects will be picked up by "context.sync()".</span></span>'
           type:
             - 'OfficeExtension.ClientObject[]'
         - id: batch
-          description: '<span data-ttu-id="63877-115">一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="63877-115">A function that takes in a Visio.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="63877-116">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="63877-116">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+          description: '<span data-ttu-id="844b2-115">一个采用 RequestContext 的函数, 返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="844b2-115">A function that takes in a Visio.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="844b2-116">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="844b2-116">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
           type:
             - '(context: Visio.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
   - uid: visio.Visio.run_3
-    summary: '<span data-ttu-id="63877-117">使用以前创建的对象的 RequestContext, 执行对 Visio 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="63877-117">Executes a batch script that performs actions on the Visio object model, using the RequestContext of a previously-created object.</span></span> <span data-ttu-id="63877-118">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="63877-118">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: '<span data-ttu-id="844b2-117">使用以前创建的对象的 RequestContext, 执行对 Visio 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="844b2-117">Executes a batch script that performs actions on the Visio object model, using the RequestContext of a previously-created object.</span></span> <span data-ttu-id="844b2-118">解决承诺时, 将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="844b2-118">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
     remarks: |-
-      <span data-ttu-id="63877-119">除了此签名之外, 该方法还具有以下签名:</span><span class="sxs-lookup"><span data-stu-id="63877-119">In addition to this signature, the method also has the following signatures:</span></span>
+      <span data-ttu-id="844b2-119">除了此签名之外, 该方法还具有以下签名:</span><span class="sxs-lookup"><span data-stu-id="844b2-119">In addition to this signature, the method also has the following signatures:</span></span>
 
       `run<T>(batch: (context: Visio.RequestContext) => Promise<T>): Promise<T>;`
 
@@ -173,13 +179,15 @@ items:
         description: ''
       parameters:
         - id: contextObject
-          description: '<span data-ttu-id="63877-120">以前创建的 RequestContext。</span><span class="sxs-lookup"><span data-stu-id="63877-120">A previously-created Visio.RequestContext.</span></span> <span data-ttu-id="63877-121">此上下文将由批处理函数重新使用 (而不是创建新的上下文)。</span><span class="sxs-lookup"><span data-stu-id="63877-121">This context will get re-used by the batch function (instead of having a new context created).</span></span> <span data-ttu-id="63877-122">这意味着批处理将能够选取对现有 API 对象所做的更改 (如果这些对象是从该相同的上下文派生的)。</span><span class="sxs-lookup"><span data-stu-id="63877-122">This means that the batch will be able to pick up changes made to existing API objects, if those objects were derived from this same context.</span></span>'
+          description: '<span data-ttu-id="844b2-120">以前创建的 RequestContext。</span><span class="sxs-lookup"><span data-stu-id="844b2-120">A previously-created Visio.RequestContext.</span></span> <span data-ttu-id="844b2-121">此上下文将由批处理函数重新使用 (而不是创建新的上下文)。</span><span class="sxs-lookup"><span data-stu-id="844b2-121">This context will get re-used by the batch function (instead of having a new context created).</span></span> <span data-ttu-id="844b2-122">这意味着批处理将能够选取对现有 API 对象所做的更改 (如果这些对象是从该相同的上下文派生的)。</span><span class="sxs-lookup"><span data-stu-id="844b2-122">This means that the batch will be able to pick up changes made to existing API objects, if those objects were derived from this same context.</span></span>'
           type:
             - office.OfficeExtension.ClientRequestContext
         - id: batch
-          description: '<span data-ttu-id="63877-123">一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="63877-123">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="63877-124">context 参数可促进对 Visio 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="63877-124">The context parameter facilitates requests to the Visio application.</span></span> <span data-ttu-id="63877-125">由于 Office 加载项和 Visio 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Visio 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="63877-125">Since the Office add-in and the Visio application run in two different processes, the RequestContext is required to get access to the Visio object model from the add-in.</span></span>'
+          description: '<span data-ttu-id="844b2-123">一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。</span><span class="sxs-lookup"><span data-stu-id="844b2-123">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="844b2-124">Context 参数可促进对 Visio 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="844b2-124">The context parameter facilitates requests to the Visio application.</span></span> <span data-ttu-id="844b2-125">由于 Office 加载项和 Visio 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Visio 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="844b2-125">Since the Office add-in and the Visio application run in two different processes, the RequestContext is required to get access to the Visio object model from the add-in.</span></span>'
           type:
             - '(context: Visio.RequestContext) => Promise<T>'
+      typeParameters:
+        - id: T
 references:
   - uid: visio.Visio.Application
     name: Visio.Application
